<resources>
    <string name="app_name">Okaz Core</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Cancel">Cancel</string>
    <string name="Clear">Clear</string>
    <string name="Save">Save</string>
    <string name="UserName">User Name</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="Name">Name</string>
    <string name="SubscType">Subsc Type</string>
    <string name="paymentType">payment Type</string>
    <string name="ChequNo">Cheque No</string>
    <string name="DueDate">Due Date</string>
    <string name="Bank">Bank</string>
    <string name="ThisPOSNamealreadyexist">This POSName already exist</string>
    <string name="SubscriberName">Subs Name</string>
    <string name="Activity">Activity</string>
    <string name="Street">Street</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="Area">Area</string>
    <string name="ContractType">Contract Type</string>
    <string name="BuildingNo">Building No</string>
    <string name="AppointmentTypeName">Appointment Type</string>
    <string name="Price">Price</string>
    <string name="CopiesNo">Copies No</string>
    <string name="NumberCopies">Number Copies</string>
    <string name="NetAmount">Net Amount</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="IncludeOffers">Include Offers</string>
    <string name="ClientName">Client Name</string>
    <string name="Ph_Mobile">Ph/Mobile</string>
    <string name="Search">Search</string>
    <string name="PassWord">PassWord</string>
    <string name="LogIn">LogIn</string>
    <string name="Date">Date</string>
    <string name="ClickHere">Click Here</string>
    <string name="GetData">Get Data</string>
    <string name="SetResult">Set Result</string>
    <string name="Total">Total :</string>
    <string name="DriverName">Driver Name</string>
    <string name="Location">Location</string>
    <string name="Address">Address</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Count">Count</string>
    <string name="Renew">Renew</string>
    <string name="ResultType">Result Type</string>
    <string name="Reason">Reason</string>
    <string name="Note">Note</string>
    <string name="PleaseChooseAnotherTypeContract">Please Choose Another Type Contract</string>
    <string name="InValidDate">InValid Date</string>
    <string name="InValidNetAmount">InValid NetAmount</string>
    <string name="PleaseCheckofDate">Please Check of Date</string>
    <string name="Reference">Reference</string>
    <string name="ID">ID</string>
    <string name="Comp_Name">Comp Name</string>
    <string name="National_Number">National Number</string>
    <string name="Phone">Phone</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="Group">Group</string>
    <string name="Classification">Classification</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="Revert">Revert</string>
    <string name="View_Contract">View Contract</string>
    <string name="Appointments">Appointments</string>
    <string name="Field_Visit">Field Visit</string>
    <string name="Profiles">Profiles</string>
    <string name="Reports">Reports</string>
    <string name="Notification_Result">Notification Result</string>
    <string name="Daily_Work">Daily Work</string>
    <string name="Device_ID">Device ID</string>
    <string name="Change_Password">Change Password</string>
    <string name="Check_For_Update">Check For Update</string>
    <string name="Check_In">Check In</string>
    <string name="Check_InPOS">Check In POS</string>
    <string name="CheckIn_Clup">Check In Alghad Club</string>
    <string name="Signtuare">Signtuare</string>
    <string name="ReSetStartDate">Re-Set StartDate</string>
    <string name="Done">Done</string>
    <string name="Error">Error..</string>
    <string name="Enable_To_Connected">Enable To Connected</string>
    <string name="Please_Wait">Please Wait</string>
    <string name="Save_Contract">Save Contract</string>
    <string name="Save_Done">Save Done</string>
    <string name="Printing_Contract">Printing Contract</string>
    <string name="YouHaveProblem">You Have Problem</string>
    <string name="AreYouSure">Are You Sure ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Copies_No_Is_Not_Valid">Copies No Is Not Valid</string>
    <string name="Details">Details</string>
    <string name="Contracts">Contracts</string>
    <string name="Notification">Notification</string>
    <string name="Enter_Name_Or_Ph_Mobiel">Enter Name Or Ph/Mobiel</string>
    <string name="Please_Select_Client">Please Select Client</string>
    <string name="NoData">No Data</string>
    <string name="EnterName">EnterName</string>
    <string name="EnterNumber">Enter Number</string>
    <string name="NewContract">New Contract</string>
    <string name="NoDataForClassification">No Data For Classification</string>
    <string name="Invalid_UserName_Password_Or_CheckGPS">Invalid UserName/Password Or check GPS</string>
    <string name="Check_GPS_Or_Internet">Check GPS Or Internet</string>
    <string name="ContractNo">ContractNo</string>
    <string name="FromDate">From Date</string>
    <string name="ToDate">To Date</string>
    <string name="Grace">Grace</string>
    <string name="Time">Time</string>
    <string name="SpecialOffer">Special Offer</string>
    <string name="CallID">Call ID</string>
    <string name="ClientID">Client ID</string>
    <string name="ContractID">Contract ID</string>
    <string name="ClientPhone">Client Phone</string>
    <string name="ClientMobile">Client Mobile</string>
    <string name="PleaseEnterDate">Please Enter Date !!!</string>
    <string name="Print">Print</string>
    <string name="Print_Select_Contract">Print Select Contract</string>
    <string name="Bluetooth_has_opened">Bluetooth has opened</string>
    <string name="Bluetooth_has_Closed">Bluetooth has Closed</string>
    <string name="Password_Not_Confirmation">Password Not Confirmation</string>
    <string name="Enter_Old_And_New_Pass">Enter Old And New Pass</string>
    <string name="Done_Up_date">Done Up date</string>
    <string name="Unable_To_Update">Unable To Update </string>
    <string name="PosName">Pos Name</string>
    <string name="BoxLocation">Box Location</string>
    <string name="CopiesNumberMustbe1orMore">CopiesNumber Must be 1 or More</string>
    <string name="DevicedoesnotsupportBluetooth">Device does not support Bluetooth</string>
    <string name="Bluetoothisnotenable">Bluetooth is not enable</string>
    <string name="BoxLocationSavedDone">Box Location Saved Done</string>
    <string name="PleaseReLogIn">Please ReLogIn</string>
    <string name="PosorNoteorAreaIsEmpty">Pos or Note or Area Is Empty</string>
    <string name="PleaseEnterMinimum3characters">Please Enter Minimum 3 characters</string>
    <string name="PleaseContactSupport">Please Contact Support</string>
    <string name="Changename">Change Name</string>
    <string name="ChngeCompany">Change Company</string>
    <string name="ChngePhone">Change Phone</string>
    <string name="ChngeEmail">Change Email</string>
    <string name="ChangeNationalNo">National No</string>
    <string name="ChangeMobile">Change Mobile</string>
    <string name="ChangeNote">Change Note</string>
    <string name="ChangeClassification">Classification</string>
    <string name="ChangeOffer">Change Offer</string>
    <string name="FillInfo">FillInfo</string>
    <string name="DeviceID">DeviceID </string>
    <string name="DistCheckIn">Distributor Lines</string>
    <string name="Supervisor">Supervisor</string>
    <string name="Distributor">Distributor</string>
    <string name="GetLocation">Get Location</string>
    <string name="UpdateLocation">Update Location</string>
    <string name="Select_One">Select One</string>
    <string name="SalesRep">Sales Rep</string>
    <string name="AdsType">Ads Type</string>
    <string name="RefNo">Ref No.</string>
    <string name="ContractCategory">Contract Category</string>
    <string name="AdsCategory">Ads Category</string>
    <string name="Subject">Subject</string>
    <string name="Agency_Acc">Agency/Acc</string>
    <string name="Password">Password </string>
    <string name="ClientType">Client Type</string>
    <string name="Agency">Agency</string>
    <string name="ClientNameEn">Client Name En</string>
    <string name="ClientNameAr">Client Name Ar</string>
    <string name="Contract">Contract</string>
    <string name="AccountNo">Account No</string>
    <string name="Public">Public</string>
    <string name="Category">Category</string>
    <string name="Telephone">Telephone</string>
    <string name="Fax">Fax :</string>
    <string name="E_Mail">E-Mail</string>
    <string name="Discount">Discount %</string>
    <string name="PressTax">Press Tax %</string>
    <string name="SalesTax">Sales Tax %</string>
    <string name="Commis">Commis.%</string>
    <string name="CrNote">Cr. Note%</string>
    <string name="SubTotal">Sub Total</string>
    <string name="Net">Net</string>
    <string name="FreeSTax">Free STax</string>
    <string name="FreePTax">Free PTax</string>
    <string name="Offer">Offer</string>
    <string name="Show">Show</string>
    <string name="Cm">Cm</string>
    <string name="Col">Col</string>
    <string name="PageType">Page Type</string>
    <string name="PageName">Page Name</string>
    <string name="PagePrice">Page Price</string>
    <string name="PageNo">PageNo</string>
    <string name="Qty">Qty</string>
    <string name="FreeQty">Free Qty</string>
    <string name="Word">Word</string>
    <string name="Freq">Freq</string>
    <string name="FirstIssDate">First Iss Date</string>
    <string name="FirstIssID">First Iss ID </string>
    <string name="TotalPrice">Total Price</string>
    <string name="SCm">SCm</string>
    <string name="SCol">SCol</string>
    <string name="ClientManagement">Client Management</string>
    <string name="DailyWork">Daily Work</string>
    <string name="New">New</string>
    <string name="Revent">Revent</string>
    <string name="SelectAgency">Select Agency</string>
    <string name="Selectsector">Select sector</string>
    <string name="ThisDateIsClosed">This Date Is Closed</string>
    <string name="ThisDateIsNotValied">This Date Is Not Valied</string>
    <string name="YouHaveErrorInDate">You Have Error In Date</string>
    <string name="NoInternet">No Internet</string>
    <string name="YouHaveaProblemPleaseCheckContractInfo">You Have a Problem Please Check Contract Info</string>
    <string name="PleaseSelectAdsType">Please select Ads Type</string>
    <string name="PleaseSelectAds_Category">Please Select Ads_Category</string>
    <string name="PleaseSelectContractCategory">Please Select Contract Category</string>
    <string name="PleaseSelectClient">Please Select Client</string>
    <string name="Wait">Wait..</string>
    <string name="InValidUserNameOrPassword">invalid user name or password</string>
    <string name="PrintDailyWork">Print Daily Work</string>
    <string name="PrintSelectedContract">Print Selected Contract</string>
    <string name="Please_Enter_Name_Ar">Please Enter Name Ar</string>
    <string name="EmptyText">EmptyText</string>
    <string name="ChequeNo">Cheque No</string>
    <string name="ADR">ADR</string>
    <string name="Collector">Collector</string>
    <string name="Distribution">Distribution</string>
    <string name="RememberMe">Remember Me</string>
    <string name="RememberPassword">Remember Password</string>
    <string name="Version">Version</string>
</resources>