<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoreLogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/android"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageViewLogo_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_weight="2">


            <EditText
                android:id="@+id/txtMainUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/UserName"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/txtMainPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PassWord"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgModules"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rbADR"
                        android:text="@string/ADR"
                        android:checked="true"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rbCollector"
                        android:text="@string/Collector"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rbDistribution"
                        android:text="@string/Distribution"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/chbRememberMe"
                    android:text="@string/RememberMe"
                    android:layout_weight="1"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/chbRememberPassword"
                    android:text="@string/RememberPassword"
                    android:layout_weight="1"/>

                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtChangeLang"
                android:text="Lang"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:clickable="true"></TextView>

            <Button
                android:id="@+id/BtnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/LogIn"
                android:layout_marginTop="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Version"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersionName"
                android:text="@string/Version"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
