<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_DailyWorkDate"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/Date" />

        <EditText
            android:id="@+id/DailyWork_TxTDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ClickHere"
            android:imeOptions="actionSearch"
            android:inputType="date" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvMSG_DailtWorkk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_weight="1.50"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/BtnSearch_DaliyWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/Search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.44"
        android:orientation="vertical" >

        <ExpandableListView
            android:id="@+id/expandableList_DailyWork"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >
        </ExpandableListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <!-- android:layout_alignParentBottom="true" -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Total" />

        <TextView
            android:id="@+id/tvTotal_DailyWork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4" >

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/collbtnPrint"
        android:text="@string/Print"
        android:layout_weight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/collbtnPrintSelected"
        android:text="@string/PrintSelectedContract"
        android:layout_weight="1"/>
        </LinearLayout>
</LinearLayout>