<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/llDate"
        android:layout_weight=".25">

        <TextView
            android:id="@+id/tv_DailyWorkDate"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/Date" />

        <EditText
            android:id="@+id/DailyWork_TxTDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ClickHere"
            android:imeOptions="actionSearch"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight=".25" >

        <TextView
            android:id="@+id/tvMSG_DailyWork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_below="@+id/llDate">
    </ExpandableListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/adrbtnDailyWorkPrint"
            android:layout_weight="1"
            android:text="@string/PrintDailyWork"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/adrbtnDailyWorkPrintSelected"
            android:layout_weight="1"
            android:text="@string/PrintSelectedContract"
            android:visibility="visible"/>


        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Total" />

        <TextView
            android:id="@+id/tvDailyWork_Total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>